移除无用的脚本功能、添加js脚本支持、高级调试完善